<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/gradient_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".fragments.CalendarFragment">

    <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendar"
            android:layout_width="411dp"
            android:layout_height="573dp"
            app:headerColor="@color/jade"
            app:headerLabelColor="@color/midnight"
            app:abbreviationsBarColor="@color/sky"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/schedule_task_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:todayLabelColor="@color/mango" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <!-- Footer Navigation -->
    <Button
            android:id="@+id/schedule_task_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/schedule_task"
            android:textColor="@color/midnight"
            android:backgroundTint="@color/mango"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="84dp"
            app:layout_constraintHorizontal_bias="0.495"/>
    <LinearLayout
            android:id="@+id/footerNavigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp">

        <Button
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textSize="13sp"
                android:textColor="@color/mango"
                android:backgroundTint="@color/midnight" />

        <Button
                android:id="@+id/btnHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help"
                android:textSize="13sp"
                android:textColor="@color/mango"
                android:backgroundTint="@color/midnight" />

        <Button
                android:id="@+id/btnAbout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about"
                android:textSize="13sp"
                android:textColor="@color/mango"
                android:backgroundTint="@color/midnight" />

        <Button
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout"
                android:textSize="13sp"
                android:textColor="@color/mango"
                android:backgroundTint="@color/midnight" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

