<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_animation"
        tools:context=".fragments.HomeFragment">

    <!-- Profile Section -->
    <TextView
            android:id="@+id/profileName"
            android:layout_width="184dp"
            android:layout_height="66dp"
            android:text="@string/john_doe"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/sky"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.5"/>

    <!-- Date and Time -->
    <TextView
            android:id="@+id/dateTimeDisplay"
            android:layout_width="354dp"
            android:layout_height="44dp"
            android:text="@string/date_time_example"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/profileName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

    <!-- Calendar Icon -->
    <ImageView
            android:id="@+id/calendarPlus"
            android:layout_width="70dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/calendar_plus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

    <!-- User Icon -->
    <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icons8_user_64"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>



    <!-- update middle view here -->


    <!-- Today's Progress Section -->
    <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_progress"
            android:textColor="@color/mango"
            app:layout_constraintTop_toBottomOf="@id/dateTimeDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

    <ProgressBar
            android:id="@+id/dailyProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progress="40"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/progressText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

    <!-- Footer Navigation -->
    <LinearLayout
            android:id="@+id/footerNavigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp">

        <Button
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textColor="@color/mango"
                android:backgroundTint="@color/midnight" />

        <Button
                android:id="@+id/btnHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help"
                android:textColor="@color/mango"
                android:backgroundTint="@color/midnight" />

        <Button
                android:id="@+id/btnAbout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about"
                android:textColor="@color/mango"
                android:backgroundTint="@color/midnight" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>